# solana-idl-ai-agent-openai-interface

./: Cargo.toml
idls/: G2d9iwvnihWxnzGFW11cEyn4sUgv7haLq9LFeMRMteoy.json
src/: action.yaml  main.rs
