[package]
name = "idlbazaar"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
serde = "1.0.216"
serde_json = "1.0.133"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
once_cell = "1.20.2"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
bs58 = "0.5.1"
anchor-client = "0.30.1"
spl-associated-token-account = "3.0.0"
solana-sdk = "2.1.6"
bincode = "1.3.3"
base64 = "0.22.1"
